--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
   <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1500836731324917');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1500836731324917&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1500836731324917');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1500836731324917&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -212,9 +213,11 @@ src="https://www.facebook.com/tr?id=1500836731324917&ev=PageView&noscript=1"
   <div class="container">
     <div class="logo"></div>
     <h1>¡UNITE A LOS QUE YA ESTAN GANANDO! </h1>
-    <h2>👇🏽 Contáctanos tocando el boton 👇🏽</h2>
+    <h2>👇🏽 Contáctanos tocando el botón 👇🏽</h2>
     <div class="cta">
-      <a href="https://wa.me/5493513217425?text=Hola%2C%20quiero%20que%20me%20hagas%20un%20usuario%20gratis" class="cta-button">
+      <a href="https://wa.me/5493513217425?text=Hola%2C%20quiero%20que%20me%20hagas%20un%20usuario%20gratis"
+         class="cta-button"
+         onclick="fbq('track', 'Contact');">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="whatsapp" />
         JUGAR!
       </a>
@@ -273,6 +276,6 @@ src="https://www.facebook.com/tr?id=1500836731324917&ev=PageView&noscript=1"
 
     mostrarNotificacion();
     setInterval(mostrarNotificacion, 2500);
-    </script>
+  </script>
 </body>
 </html>
