--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
     <div class="cta">
       <a href="https://wa.me/5493513217425?text=Hola%2C%20quiero%20que%20me%20hagas%20un%20usuario%20gratis"
          class="cta-button"
-         onclick="fbq('track', 'Contact');">
+         onclick="fbq('track', 'Contact');"
+         target="_blank" rel="noopener noreferrer">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="whatsapp" />
         JUGAR!
       </a>
